--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,4 +1,4 @@
-ul {
+/* ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -24,3 +24,5 @@ li a {
   .padding{
     margin: 0 10px;
   }
+
+   */
