adding router navigate for songs --working

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -26,3 +26,11 @@ li a {
   }
 
    */
+
+  /* To list the items Horizontally
+  ul{
+    list-style: none;
+  }
+  li{
+    display: inline;
+  } */
