adding setter getter --working

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
         <input #query type="text" class="form-control" placeholder="Search Songs, Albums..">
     </div>
     <div>
-        <ul class="row">
+        <ul class="row" style="list-style-type:none;">
             <!-- HOME -->
             <li class="col-4">
                 <a routerLink="/login">Home</a>
